--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "hksc_disassembler"
-version = "0.1.3"
+version = "0.1.4"
 description = "A HavokScript 5.1 Disassembler"
 authors = [{ name = "Surasia" }]
-license = { file = "LICENSE" }
+license = { file = "LICENSE.txt" }
 dependencies = ["click~=8.1.7"]
 readme = "README.md"
 requires-python = ">= 3.11.0"
